--- a/viz_1.rmd
+++ b/viz_1.rmd
@@ -91,7 +91,101 @@ weather_df |>
   ) |>
   ggplot(aes(x = tmin_fahr, y = tmax_fahr)) +
   geom_point() +
-  geom_smooth(se = FALSE)
+  geom_smooth(se = FALSE, method = "lm")
 ```
 
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = name, shape = name)) +
+  geom_smooth(se = FALSE) +
+  geom_point()
+```
 
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_hex()
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax)) +
+   geom_point(color = "purple")
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin)) +
+  geom_histogram(color = "white", fill = "blue")
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, color = name)) +
+  geom_histogram()
+
+weather_df |>
+  ggplot(aes(x = tmin, fill = name)) +
+  geom_histogram()
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, fill = name)) +
+  geom_histogram() +
+  facet_grid(name ~ .)
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, fill = name)) +
+  geom_density(alpha = 0.2)
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax)) +
+    geom_boxplot(aes(fill = name))
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, fill = name)) +
+  geom_violin()
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y=name)) +
+  geom_density_ridges()
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, fill = name)) +
+  geom_density(alpha = 0.2)
+```
+
+```{r}
+weather_df |>
+  filter(prcp > 5, prcp < 1000) |>
+  ggplot(aes(x = prcp, fill = name)) +
+  geom_density(alpha = 0.2)
+```
+
+## Saving Plot
+```{r}
+ggp_weather_violin =
+  weather_df |>
+  ggplot(aes(x = name, y = tmin, fill = name)) +
+  geom_violin()
+
+ggp_weather_violin
+
+ggsave("plots/violin_plots.pdf", ggp_weather_violin,
+       width = 8, height = 6)
+```
+embedding plots
+```{r, fig.width = 6, fig.height = 4}
+ggp_weather_violin
+```
